--- a/Makefile.txt
+++ b/Makefile.txt
@@ -1,4 +1,4 @@
-NAME   := fault-lang/fault
+NAME   := Probabilio
 TAG    := $$(git log -1 --pretty=%h)
 IMG    := ${NAME}:${TAG}
 LATEST := ${NAME}:latest
